
* SOLR-13034: Partial (AKA Atomic) updates could encounter "LazyField" instances in the document
  cache and not know hot to deal with them when writing the updated doc to the update log.
  (David Smiley)

* SOLR-15191: Fix JSON Faceting on EnumFieldType if allBuckets, numBuckets or missing is set.
  (Thomas Wöckinger, David Smiley)

Other Changes
---------------------
* SOLR-15118: Deprecate CollectionAdminRequest.getV2Request(). (Jason Gerlowski)

==================  8.8.1 ==================

Bug Fixes
---------------------

* SOLR-15145: System property to control whether base_url is stored in state.json to enable back-compat with older SolrJ versions.
  (Timothy Potter)

* SOLR-15114: Fix bug that caused WAND optimization to be disabled in cases where the max score is requested (such as
  multi-shard requests in SolrCloud) (Naoto Minami via Tomás Fernández Löbbe)

* SOLR-15136: Reduce excessive logging introduced with Per Replica States feature (Ishan Chattopadhyaya)

* SOLR-15138: Collection creation for PerReplicaStates does not scale to large collections as well as regular collections
  (Mike Drob, Ilan Ginzburg, noble, Ishan Chattopadhyaya)

* SOLR-15135: Admin UI display collections with perReplicaState=true in graph view (Timothy Potter)

==================  8.8.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Upgrade Notes
---------------------

* Internal logic for identifying 'Solr Home' has been refactored to make testing less error prone.  Plugin
  developers using SolrPaths.locateSolrHome() or 'new SolrResourceLoader' should check deprecation warnings as existing
  some existing functionality will be removed in 9.0.  See SOLR-14934 for more details.

New Features
---------------------

* SOLR-14907: Add v2 API for configSet upload, including single-file insertion. (Houston Putman)

* SOLR-14560: Add interleaving support in Learning To Rank. (Alessandro Benedetti, Christine Poerschke)
